2011-03-21  Chong Yidong  <cyd@stupidchicken.com>

	* custom.el (custom-push-theme): Quote "changed" custom var entry.

2011-03-21  Leo Liu  <sdl.web@gmail.com>

	* ido.el (ido-read-internal): Add ido-selected to history instead
	of user input.

2011-03-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (deferred-action-list, deferred-action-function):
	Mark obsolete.

2011-03-21  Leo Liu  <sdl.web@gmail.com>

	* vc/log-view.el: Remove (require 'wid-edit), not needed after the
	change on 2011-02-13 (bug#8309).

	* minibuffer.el (read-file-name-function): Change default value.
	(read-file-name--defaults): Rename from read-file-name-defaults.
	(read-file-name-default): Rename from read-file-name.
	(read-file-name): Call read-file-name-function.

2011-03-21  Glenn Morris  <rgm@gnu.org>

	* eshell/esh-opt.el (eshell-eval-using-options, eshell-process-args):
	Doc fixes.

2011-03-21  Chong Yidong  <cyd@stupidchicken.com>

	* cus-theme.el: Add missing provide statement.
	(customize-create-theme): Extract theme value correctly.
	(custom-theme-visit-theme): Autoload.
	(customize-create-theme): Prompt before inserting default faces.

2011-03-20  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-menu.el (calc-units-menu): Add entries for logarithmic
	units and musical notes.

2011-03-20  Leo  <sdl.web@gmail.com>

	* ido.el (ido-read-internal): Use completing-read-default.
	(ido-completing-read): Fix compatibility with completing-read.

2011-03-20  Christian Ohler  <ohler@gnu.org>

	* emacs-lisp/ert.el (ert-run-tests-batch): Remove unused variable.
	(ert-delete-all-tests): Use `called-interactively-p' rather than
	`interactive-p'.
	(ert--make-xrefs-region): Respect END.

2011-03-19  Chong Yidong  <cyd@stupidchicken.com>

	* dired-aux.el (dired-create-directory): Signal an error if the
	directory already exists (Bug#8246).

	* facemenu.el (list-colors-display): Call list-faces-display
	inside with-help-window.